Global: Add verification for users and groups
Resolves #18

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1241,6 +1241,10 @@ h4 {
     background-repeat: repeat-y;
 }
 
+.name-checkmark {
+    margin-left: 2pt;
+}
+
 .paginators {
     margin-top: 15px;
 }
